--- a/SmartContactManager/src/main/resources/application.properties
+++ b/SmartContactManager/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.show-sql=true
 #for creating schemas and tables
 spring.jpa.hibernate.ddl-auto=update
 
+#shivam somw work here
+
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
